--- a/soccer/templates/email_username/user_profile.html
+++ b/soccer/templates/email_username/user_profile.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Welcome{% endblock %}
 {% block content %}
-</p> Hi there!</p>
+</p> Hi there, {{ user.first_name }}</p>
 {% endblock %}
